update revision on page

--- a/change-password.html
+++ b/change-password.html
@@ -31,16 +31,18 @@
   <body class="bg-white" style="height: 100vh">
     <div class="container h-100">
       <div
-        class="fixed-top d-flex align-items-center justify-content-center"
+        class="fixed-top d-flex align-items-center justify-content-start bg-white"
         style="
           border-bottom: 1px solid #ededed;
           box-shadow: 0px 24px 96px rgba(0, 0, 0, 0.02);
           padding: 24px 0px;
         "
       >
-        <a href="index.html">
-          <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
-        </a>
+        <div style="padding-left: 120px; padding-right: 120px">
+          <a href="index.html">
+            <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
+          </a>
+        </div>
       </div>
       <div class="row justify-content-center align-items-center h-100">
         <div
@@ -77,7 +79,7 @@
                     class="form-control form-control-user"
                     id="newPassword"
                     placeholder="Masukkan password anda..."
-                    style="border-right: none"
+                    oninput="handlePasswordValidation(event, '#indicator-section')"
                   />
                   <button
                     type="button"
@@ -101,7 +103,6 @@
                     class="form-control form-control-user"
                     id="confirmPassword"
                     placeholder="Konfirmasi password anda..."
-                    style="border-right: none"
                   />
                   <button
                     type="button"
@@ -112,28 +113,39 @@
                   </button>
                 </div>
               </div>
-              <div class="row no-gutters mt-4 mb-2">
+              <div class="row no-gutters mt-4 mb-2" id="indicator-section">
                 <div
-                  class="col m-1 rounded-pill bg-gradient-success"
+                  id="level-1"
+                  class="col m-1 rounded-pill bg-gray-400"
                   style="height: 3px"
                 ></div>
                 <div
-                  class="col m-1 rounded-pill bg-gradient-success"
+                  id="level-2"
+                  class="col m-1 rounded-pill bg-gray-400"
                   style="height: 3px"
                 ></div>
                 <div
-                  class="col m-1 rounded-pill bg-gradient-success"
+                  id="level-3"
+                  class="col m-1 rounded-pill bg-gray-400"
                   style="height: 3px"
                 ></div>
                 <div
-                  class="col m-1 rounded-pill"
-                  style="height: 3px; background: rgba(123, 124, 133, 0.4)"
+                  id="level-4"
+                  class="col m-1 rounded-pill bg-gray-400"
+                  style="height: 3px"
                 ></div>
               </div>
-              <p>
-                Kata sandi yang anda masukkan saat ini sudah cukup baik dan anda
-                bisa mengubah password anda untuk saat ini
-              </p>
+              <div>
+                <li class="medium-metadata primary-800--text mb-3">
+                  Berisi setidaknya 6 karakter
+                </li>
+                <li class="medium-metadata primary-800--text mb-3">
+                  Berisi setidaknya satu angka & huruf besar
+                </li>
+                <li class="medium-metadata primary-800--text mb-0">
+                  Berawalan dengan huruf kapital
+                </li>
+              </div>
             </div>
             <a
               href="reset-password-success.html"
@@ -145,7 +157,7 @@
         </div>
       </div>
       <div
-        class="fixed-bottom d-flex align-items-center justify-content-center"
+        class="fixed-bottom d-flex align-items-center justify-content-center bg-white"
         style="
           border-top: 1px solid #ededed;
           box-shadow: 0px 24px 96px rgba(0, 0, 0, 0.02);
@@ -174,6 +186,29 @@
           x.type = 'text'
         } else {
           x.type = 'password'
+        }
+      }
+
+      const handlePasswordValidation = (e, id) => {
+        const pass = e.target.value
+        const elementId = id || '#createAdminModal'
+        let strength = 0
+        const arr = [/.{5,}/, /[a-z]+/, /[0-9]+/, /^[A-Z]/]
+        jQuery.map(arr, function (regexp) {
+          if (pass.match(regexp)) strength++
+        })
+        handlePasswordStrength(strength, elementId)
+      }
+
+      const handlePasswordStrength = (strength, elementId) => {
+        for (let i = 1; i <= 4; i++) {
+          if (i <= strength) {
+            $(`${elementId} #level-${i}`).addClass('bg-gradient-success')
+            $(`${elementId} #level-${i}`).removeClass('bg-gray-400')
+          } else {
+            $(`${elementId} #level-${i}`).addClass('bg-gray-400')
+            $(`${elementId} #level-${i}`).removeClass('bg-gradient-success')
+          }
         }
       }
     </script>
