--- a/proposal.html
+++ b/proposal.html
@@ -64,7 +64,7 @@
               <div style="width: 24px; margin-right: 24px">
                 <i class="fas fa-list-alt"></i>
               </div>
-              <span class="medium-body neutral-800--text">Dashboard</span>
+              <span class="regular-body neutral-800--text">Dashboard</span>
             </div>
           </a>
         </li>
@@ -76,7 +76,7 @@
               <div style="width: 24px; margin-right: 24px">
                 <i class="fas fa-user"></i>
               </div>
-              <span class="medium-body neutral-800--text">Klien</span>
+              <span class="regular-body neutral-800--text">Klien</span>
             </div>
           </a>
         </li>
@@ -100,7 +100,7 @@
               <div style="width: 24px; margin-right: 24px">
                 <i class="fas fa-briefcase"></i>
               </div>
-              <span class="medium-body neutral-800--text">Proyek</span>
+              <span class="regular-body neutral-800--text">Proyek</span>
             </div>
           </a>
         </li>
@@ -112,7 +112,7 @@
               <div style="width: 24px; margin-right: 24px">
                 <i class="fas fa-cog"></i>
               </div>
-              <span class="medium-body neutral-800--text">Pengaturan</span>
+              <span class="regular-body neutral-800--text">Pengaturan</span>
             </div>
           </a>
         </li>
@@ -133,7 +133,7 @@
               >
                 <i class="fas fa-sign-out-alt" style="color: #db2e57"></i>
               </div>
-              <span class="medium-body neutral-800--text">Keluar</span>
+              <span class="regular-body neutral-800--text">Keluar</span>
             </div>
           </a>
         </li>
@@ -155,6 +155,7 @@
           <!-- Topbar -->
           <nav
             class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow"
+            style="margin-bottom: 2.5rem"
           >
             <!-- Sidebar Toggle (Topbar) -->
             <button
@@ -302,20 +303,17 @@
               >
                 <div class="col-4 p-0">
                   <div class="d-flex align-items-center flex-nowrap">
-                    <div class="input-group input-focus mr-3">
+                    <div class="input-group input-focus input-search mr-3">
                       <input
                         type="text"
                         class="form-control"
                         id="searchField"
                         placeholder="Cari Proposal..."
                       />
-                      <div class="input-group-append">
-                        <span class="input-group-text bg-white"
-                          ><i class="fa fa-search"></i
-                        ></span>
-                      </div>
                     </div>
-                    <button class="btn btn-dark bg-primary-600 bold-body px-4">
+                    <button
+                      class="btn btn-custom-120 btn-dark bg-primary-600 bold-body px-4"
+                    >
                       Cari
                     </button>
                   </div>
@@ -341,22 +339,24 @@
                       class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                       aria-labelledby="userDropdown"
                     >
-                      <div class="p-4" style="width: 400px">
+                      <div class="py-4" style="width: 400px">
                         <div
-                          class="d-flex align-items-center justify-content-between"
+                          class="d-flex align-items-center justify-content-between px-4"
                         >
-                          <p class="h5 font-weight-bolder m-0">
+                          <p class="bold-heading-3 neutral-700--text m-0">
                             Urutkan & Filter
                           </p>
-                          <button class="btn btn-secondary">Terapkan</button>
+                          <button class="btn bg-primary-600 btn-dark bold-body">
+                            Terapkan
+                          </button>
                         </div>
                         <div class="mt-4">
                           <!-- Urutkan - Collapse -->
                           <div class="my-3">
-                            <div id="headingOne">
+                            <div id="headingOne" class="px-4">
                               <h2 class="mb-0">
                                 <button
-                                  class="btn btn-block text-left px-1"
+                                  class="btn btn-block text-left px-1 btn-collapse"
                                   type="button"
                                   data-toggle="collapse"
                                   data-target="#collapseOne"
@@ -364,7 +364,9 @@
                                   aria-controls="collapseOne"
                                 >
                                   <div class="d-flex justify-content-between">
-                                    <p class="h6 mb-0 font-weight-bolder">
+                                    <p
+                                      class="h6 mb-0 font-weight-bolder primary-600--text"
+                                    >
                                       Urutkan
                                     </p>
                                     <li class="fas fa-chevron-down"></li>
@@ -378,48 +380,50 @@
                               class="collapse multi-collapse show"
                               aria-labelledby="headingOne"
                             >
-                              <div class="px-1 pt-2">
-                                <div
-                                  class="custom-control custom-checkbox mb-1"
-                                >
-                                  <input
-                                    type="checkbox"
-                                    class="custom-control-input"
-                                    id="sortAlphabet"
-                                  />
-                                  <label
-                                    class="custom-control-label"
-                                    for="sortAlphabet"
-                                    >Urutkan Sesuai Abjad</label
+                              <div class="bg-primary-50">
+                                <div class="px-4 py-3">
+                                  <div
+                                    class="custom-control custom-checkbox my-2"
                                   >
-                                </div>
-                                <div
-                                  class="custom-control custom-checkbox mb-1"
-                                >
-                                  <input
-                                    type="checkbox"
-                                    class="custom-control-input"
-                                    id="sortNewest"
-                                  />
-                                  <label
-                                    class="custom-control-label"
-                                    for="sortNewest"
-                                    >Urutkan Data Terbaru</label
+                                    <input
+                                      type="checkbox"
+                                      class="custom-control-input"
+                                      id="sortAlphabet"
+                                    />
+                                    <label
+                                      class="custom-control-label primary-800--text"
+                                      for="sortAlphabet"
+                                      >Urutkan Sesuai Abjad</label
+                                    >
+                                  </div>
+                                  <div
+                                    class="custom-control custom-checkbox my-2"
                                   >
-                                </div>
-                                <div
-                                  class="custom-control custom-checkbox mb-1"
-                                >
-                                  <input
-                                    type="checkbox"
-                                    class="custom-control-input"
-                                    id="sortOldest"
-                                  />
-                                  <label
-                                    class="custom-control-label"
-                                    for="sortOldest"
-                                    >Urutkan Data Terlama</label
+                                    <input
+                                      type="checkbox"
+                                      class="custom-control-input"
+                                      id="sortNewest"
+                                    />
+                                    <label
+                                      class="custom-control-label primary-800--text"
+                                      for="sortNewest"
+                                      >Urutkan Data Terbaru</label
+                                    >
+                                  </div>
+                                  <div
+                                    class="custom-control custom-checkbox my-2"
                                   >
+                                    <input
+                                      type="checkbox"
+                                      class="custom-control-input"
+                                      id="sortOldest"
+                                    />
+                                    <label
+                                      class="custom-control-label primary-800--text"
+                                      for="sortOldest"
+                                      >Urutkan Data Terlama</label
+                                    >
+                                  </div>
                                 </div>
                               </div>
                             </div>
@@ -428,10 +432,10 @@
 
                           <!-- Jenis Project -->
                           <div class="my-3">
-                            <div id="headingTwo">
+                            <div id="headingTwo" class="px-4">
                               <h2 class="mb-0">
                                 <button
-                                  class="btn btn-block text-left px-1"
+                                  class="btn btn-block text-left px-1 btn-collapse"
                                   type="button"
                                   data-toggle="collapse"
                                   data-target="#collapseTwo"
@@ -439,7 +443,9 @@
                                   aria-controls="collapseTwo"
                                 >
                                   <div class="d-flex justify-content-between">
-                                    <p class="h6 mb-0 font-weight-bolder">
+                                    <p
+                                      class="h6 mb-0 font-weight-bolder primary-600--text"
+                                    >
                                       Jenis Project
                                     </p>
                                     <li class="fas fa-chevron-down"></li>
@@ -450,73 +456,72 @@
 
                             <div
                               id="collapseTwo"
-                              class="collapse multi-collapse"
+                              class="collapse multi-collapse show"
                               aria-labelledby="headingTwo"
                             >
-                              <div class="px-1 pt-2">
-                                <div
-                                  class="custom-control custom-checkbox mb-1"
-                                >
-                                  <input
-                                    type="checkbox"
-                                    class="custom-control-input"
-                                    id="sortAlphabet"
-                                  />
-                                  <label
-                                    class="custom-control-label"
-                                    for="sortAlphabet"
-                                    >Jenis Project Satu</label
+                              <div class="bg-primary-50">
+                                <div class="px-4 py-3">
+                                  <div
+                                    class="custom-control custom-checkbox my-2"
                                   >
-                                </div>
-                                <div
-                                  class="custom-control custom-checkbox mb-1"
-                                >
-                                  <input
-                                    type="checkbox"
-                                    class="custom-control-input"
-                                    id="sortNewest"
-                                  />
-                                  <label
-                                    class="custom-control-label"
-                                    for="sortNewest"
-                                    >Jenis Project Dua</label
+                                    <input
+                                      type="checkbox"
+                                      class="custom-control-input"
+                                      id="sortAlphabet"
+                                    />
+                                    <label
+                                      class="custom-control-label primary-800--text"
+                                      for="sortAlphabet"
+                                      >Jenis Project Satu</label
+                                    >
+                                  </div>
+                                  <div
+                                    class="custom-control custom-checkbox my-2"
                                   >
-                                </div>
-                                <div
-                                  class="custom-control custom-checkbox mb-1"
-                                >
-                                  <input
-                                    type="checkbox"
-                                    class="custom-control-input"
-                                    id="sortOldest"
-                                  />
-                                  <label
-                                    class="custom-control-label"
-                                    for="sortOldest"
-                                    >Jenis Project Tiga</label
+                                    <input
+                                      type="checkbox"
+                                      class="custom-control-input"
+                                      id="sortNewest"
+                                    />
+                                    <label
+                                      class="custom-control-label primary-800--text"
+                                      for="sortNewest"
+                                      >Jenis Project Dua</label
+                                    >
+                                  </div>
+                                  <div
+                                    class="custom-control custom-checkbox my-2"
                                   >
+                                    <input
+                                      type="checkbox"
+                                      class="custom-control-input"
+                                      id="sortOldest"
+                                    />
+                                    <label
+                                      class="custom-control-label primary-800--text"
+                                      for="sortOldest"
+                                      >Jenis Project Tiga</label
+                                    >
+                                  </div>
                                 </div>
                               </div>
                             </div>
                           </div>
                           <hr />
 
-                          <div style="padding: 4px">
-                            <p class="h6 mb-3 font-weight-bolder">
+                          <div class="px-4">
+                            <p
+                              class="h6 mb-3 font-weight-bolder primary-600--text"
+                            >
                               Tahun Project
                             </p>
-                            <div class="input-group input-focus">
+                            <div class="input-group input-focus input-date">
                               <input
                                 type="text"
                                 id="datepicker"
                                 class="form-control"
                                 placeholder="Pilih tahun project"
                               />
-                              <div class="input-group-append">
-                                <span class="input-group-text bg-white"
-                                  ><i class="fa fa-calendar"></i
-                                ></span>
-                              </div>
                             </div>
                           </div>
                         </div>
