--- a/reset-password-success.html
+++ b/reset-password-success.html
@@ -31,16 +31,18 @@
   <body class="bg-white" style="height: 100vh">
     <div class="container h-100">
       <div
-        class="fixed-top d-flex align-items-center justify-content-center"
+        class="fixed-top d-flex align-items-center justify-content-start bg-white"
         style="
           border-bottom: 1px solid #ededed;
           box-shadow: 0px 24px 96px rgba(0, 0, 0, 0.02);
           padding: 24px 0px;
         "
       >
-        <a href="index.html">
-          <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
-        </a>
+        <div style="padding-left: 120px; padding-right: 120px">
+          <a href="index.html">
+            <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
+          </a>
+        </div>
       </div>
       <div class="row justify-content-center align-items-center h-100">
         <div class="card-auth">
@@ -60,12 +62,10 @@
             <p class="bold-heading-1 neutral-800--text mb-4">
               Kata Sandi Berhasil Diubah
             </p>
-            <p class="regular-body">
+            <p class="regular-body" style="margin-bottom: 40px">
               Kata sandi anda telah berhasil diubah maka, tahapan selanjutnya
               anda bisa melakukan login untuk masuk kembali ke akun anda
             </p>
-
-            <hr class="my-5" />
             <form class="user">
               <a
                 href="login.html"
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div
-        class="fixed-bottom d-flex align-items-center justify-content-center"
+        class="fixed-bottom d-flex align-items-center justify-content-center bg-white"
         style="
           border-top: 1px solid #ededed;
           box-shadow: 0px 24px 96px rgba(0, 0, 0, 0.02);
