--- a/send-email-success.html
+++ b/send-email-success.html
@@ -35,16 +35,18 @@
   <body class="bg-white" style="height: 100vh">
     <div class="container h-100">
       <div
-        class="fixed-top d-flex align-items-center justify-content-center"
+        class="fixed-top d-flex align-items-center justify-content-start bg-white"
         style="
           border-bottom: 1px solid #ededed;
           box-shadow: 0px 24px 96px rgba(0, 0, 0, 0.02);
           padding: 24px 0px;
         "
       >
-        <a href="index.html">
-          <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
-        </a>
+        <div style="padding-left: 120px; padding-right: 120px">
+          <a href="index.html">
+            <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
+          </a>
+        </div>
       </div>
       <div class="row justify-content-center align-items-center h-100">
         <div class="card-auth">
@@ -59,13 +61,11 @@
             <p class="bold-heading-1 neutral-800--text mb-4">
               Verifikasi Email Anda
             </p>
-            <p class="neutral-700--text">
-              Almost there! We’ve sent a verification email to
-              f********@g****.com. You need to verify your email address to log
-              into Deka CRM Dashboard.
+            <p class="neutral-700--text" style="margin-bottom: 40px">
+              Kami telah mengirimkan email verifikasi ke f*******@g****.com.
+              Anda perlu memverifikasi alamat email Anda untuk masuk ke Dasbor
+              Deka CRM.
             </p>
-
-            <hr class="my-5" />
 
             <p class="neutral-700--text">
               Belum mendapat email?
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div
-        class="fixed-bottom d-flex align-items-center justify-content-center"
+        class="fixed-bottom d-flex align-items-center justify-content-center bg-white"
         style="
           border-top: 1px solid #ededed;
           box-shadow: 0px 24px 96px rgba(0, 0, 0, 0.02);
