--- a/client.html
+++ b/client.html
@@ -58,7 +58,7 @@
               <div style="width: 24px; margin-right: 24px">
                 <i class="fas fa-list-alt"></i>
               </div>
-              <span class="bold-bodytext neutral-800--text">Dashboard</span>
+              <span class="regular-body neutral-800--text">Dashboard</span>
             </div>
           </a>
         </li>
@@ -70,7 +70,7 @@
               <div style="width: 24px; margin-right: 24px">
                 <i class="fas fa-user"></i>
               </div>
-              <span class="medium-bodytext text-white">Klien</span>
+              <span class="bold-body text-white">Klien</span>
             </div>
           </a>
         </li>
@@ -82,7 +82,7 @@
               <div style="width: 24px; margin-right: 24px">
                 <i class="fas fa-file-alt"></i>
               </div>
-              <span class="medium-bodytext neutral-800--text">Proposal</span>
+              <span class="regular-body neutral-800--text">Proposal</span>
             </div>
           </a>
         </li>
@@ -94,7 +94,7 @@
               <div style="width: 24px; margin-right: 24px">
                 <i class="fas fa-briefcase"></i>
               </div>
-              <span class="medium-bodytext neutral-800--text">Proyek</span>
+              <span class="regular-body neutral-800--text">Proyek</span>
             </div>
           </a>
         </li>
@@ -106,7 +106,7 @@
               <div style="width: 24px; margin-right: 24px">
                 <i class="fas fa-cog"></i>
               </div>
-              <span class="medium-bodytext neutral-800--text">Pengaturan</span>
+              <span class="regular-body neutral-800--text">Pengaturan</span>
             </div>
           </a>
         </li>
@@ -127,7 +127,7 @@
               >
                 <i class="fas fa-sign-out-alt" style="color: #db2e57"></i>
               </div>
-              <span class="medium-bodytext neutral-800--text">Keluar</span>
+              <span class="regular-body neutral-800--text">Keluar</span>
             </div>
           </a>
         </li>
@@ -149,6 +149,7 @@
           <!-- Topbar -->
           <nav
             class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow"
+            style="margin-bottom: 2.5rem"
           >
             <!-- Sidebar Toggle (Topbar) -->
             <button
@@ -296,20 +297,17 @@
               >
                 <div class="col-4 p-0">
                   <div class="d-flex align-items-center flex-nowrap">
-                    <div class="input-group input-focus mr-3">
+                    <div class="input-group input-focus input-search mr-3">
                       <input
                         type="text"
                         class="form-control"
                         id="searchField"
                         placeholder="Cari Klien..."
                       />
-                      <div class="input-group-append">
-                        <span class="input-group-text bg-white"
-                          ><i class="fa fa-search"></i
-                        ></span>
-                      </div>
                     </div>
-                    <button class="btn btn-dark bg-primary-600 bold-body px-4">
+                    <button
+                      class="btn btn-custom-120 btn-dark bg-primary-600 bold-body px-4"
+                    >
                       Cari
                     </button>
                   </div>
@@ -335,9 +333,9 @@
                       class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                       aria-labelledby="userDropdown"
                     >
-                      <div class="p-4" style="width: 400px">
+                      <div class="py-4" style="width: 400px">
                         <div
-                          class="d-flex align-items-center justify-content-between"
+                          class="d-flex align-items-center justify-content-between px-4"
                         >
                           <p class="bold-heading-3 neutral-700--text m-0">
                             Urutkan & Filter
@@ -346,13 +344,13 @@
                             Terapkan
                           </button>
                         </div>
-                        <div class="accordion mt-4" id="accordionExample">
+                        <div class="mt-4" id="accordionExample">
                           <!-- Urutkan - Collapse -->
                           <div class="mb-2">
-                            <div id="headingOne">
+                            <div id="headingOne" class="px-4">
                               <h2 class="mb-0">
                                 <button
-                                  class="btn btn-block text-left px-1"
+                                  class="btn btn-block text-left px-1 btn-collapse"
                                   type="button"
                                   data-toggle="collapse"
                                   data-target="#collapseOne"
@@ -377,62 +375,64 @@
 
                             <div
                               id="collapseOne"
-                              class="collapse show"
+                              class="collapse multi-collapse show"
                               aria-labelledby="headingOne"
                               data-parent="#accordionExample"
                             >
-                              <div class="px-1 pt-2">
-                                <div
-                                  class="custom-control custom-checkbox mb-1"
-                                >
-                                  <input
-                                    type="checkbox"
-                                    class="custom-control-input"
-                                    id="sortAlphabet"
-                                  />
-                                  <label
-                                    class="custom-control-label"
-                                    for="sortAlphabet"
-                                    >Urutkan Sesuai Abjad</label
+                              <div class="bg-primary-50">
+                                <div class="px-4 py-3">
+                                  <div
+                                    class="custom-control custom-checkbox my-2"
                                   >
-                                </div>
-                                <div
-                                  class="custom-control custom-checkbox mb-1"
-                                >
-                                  <input
-                                    type="checkbox"
-                                    class="custom-control-input"
-                                    id="sortNewest"
-                                  />
-                                  <label
-                                    class="custom-control-label"
-                                    for="sortNewest"
-                                    >Urutkan Data Terbaru</label
+                                    <input
+                                      type="checkbox"
+                                      class="custom-control-input"
+                                      id="sortAlphabet"
+                                    />
+                                    <label
+                                      class="custom-control-label primary-800--text"
+                                      for="sortAlphabet"
+                                      >Urutkan Sesuai Abjad</label
+                                    >
+                                  </div>
+                                  <div
+                                    class="custom-control custom-checkbox my-2"
                                   >
-                                </div>
-                                <div
-                                  class="custom-control custom-checkbox mb-1"
-                                >
-                                  <input
-                                    type="checkbox"
-                                    class="custom-control-input"
-                                    id="sortOldest"
-                                  />
-                                  <label
-                                    class="custom-control-label"
-                                    for="sortOldest"
-                                    >Urutkan Data Terlama</label
+                                    <input
+                                      type="checkbox"
+                                      class="custom-control-input"
+                                      id="sortNewest"
+                                    />
+                                    <label
+                                      class="custom-control-label primary-800--text"
+                                      for="sortNewest"
+                                      >Urutkan Data Terbaru</label
+                                    >
+                                  </div>
+                                  <div
+                                    class="custom-control custom-checkbox my-2"
                                   >
+                                    <input
+                                      type="checkbox"
+                                      class="custom-control-input"
+                                      id="sortOldest"
+                                    />
+                                    <label
+                                      class="custom-control-label primary-800--text"
+                                      for="sortOldest"
+                                      >Urutkan Data Terlama</label
+                                    >
+                                  </div>
                                 </div>
                               </div>
                             </div>
                           </div>
                           <!-- Industry -->
                           <div class="mb-2">
-                            <div id="headingTwo">
+                            <div id="headingTwo" class="px-4">
                               <h2 class="mb-0">
                                 <button
-                                  class="btn btn-block text-left px-1"
+                                  class="btn btn-block text-left px-1 btn-collapse"
                                   type="button"
                                   data-toggle="collapse"
                                   data-target="#collapseTwo"
@@ -457,11 +457,11 @@
 
                             <div
                               id="collapseTwo"
-                              class="collapse"
+                              class="collapse multi-collapse show"
                               aria-labelledby="headingTwo"
                               data-parent="#accordionExample"
                             >
-                              <div class="px-1 pt-2">
+                              <div class="px-4">
                                 <div class="mb-2">
                                   <div class="accordion" id="innerAccordion">
                                     <!-- FMCG - Collapse -->
